--- a/app/src/main/res/layout/activity_barcode_capture_base.xml
+++ b/app/src/main/res/layout/activity_barcode_capture_base.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
-    <com.masudias.qrscanner.util.camera.CameraSourcePreview
+    <com.masudias.qrscanner.util.camera.CameraSourcePreviewBase
         android:id="@+id/preview"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/camera_preview_overlay" />
+        <com.masudias.qrscanner.util.camera.GraphicOverlay
+            android:id="@+id/camera_preview_graphic_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
-    </com.masudias.qrscanner.util.camera.CameraSourcePreview>
+
+    </com.masudias.qrscanner.util.camera.CameraSourcePreviewBase>
 
 
     <include
