--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="top_action_bar_height">64dp</dimen>
     <dimen name="top_action_bar_padding_horizontal">8dp</dimen>
     <dimen name="top_action_button_padding">12dp</dimen>
+    <dimen name="search_progress_bar_size">48dp</dimen>
+    <dimen name="bottom_prompt_chip_margin_bottom">28dp</dimen>
+    <dimen name="bottom_prompt_chip_text_size">14sp</dimen>
+    <dimen name="bottom_prompt_chip_corner_radius">8dp</dimen>
 </resources>
